tests/ui/traits/default_auto_traits/maybe-bounds-in-dyn-traits.stderr
error[E0277]: the trait bound `NonLeakS: Leak` is not satisfied
  --> $DIR/maybe-bounds-in-dyn-traits.rs:60:25
   |
LL |     let _: &dyn Trait = &NonLeakS;
   |                         ^^^^^^^^^ the trait `Leak` is not implemented for `NonLeakS`
   |
   = note: required for the cast from `&NonLeakS` to `&dyn Trait + Leak + SyncDrop`

error[E0277]: the trait bound `dyn Trait + SyncDrop: Leak` is not satisfied
  --> $DIR/maybe-bounds-in-dyn-traits.rs:65:7
   |
LL |     x.leak_foo();
   |       ^^^^^^^^ the trait `Leak` is not implemented for `dyn Trait + SyncDrop`
   |
note: required by a bound in `Trait::leak_foo`
  --> $DIR/maybe-bounds-in-dyn-traits.rs:48:5
   |
LL |     fn leak_foo(&self) {}
   |     ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Trait::leak_foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
